// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`schema-types-generator generates @oneOf input types as discriminated unions 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export interface DataIdParams {
  _?: boolean;
}
export interface DataTimestampsParams {
  createdAtColumn?: string;
  updatedAtColumn?: string;
}
export type BlueprintNodeInput = {
  shorthand: string;
} | {
  DataId: DataIdParams;
} | {
  DataTimestamps: DataTimestampsParams;
};"
`;

exports[`schema-types-generator generates enum types as string unions 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export type Status = "ACTIVE" | "INACTIVE" | "PENDING";
export type Priority = "LOW" | "MEDIUM" | "HIGH";"
`;

exports[`schema-types-generator generates input object types as interfaces 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export interface CreateUserInput {
  email: string;
  name?: string;
  age?: number;
}
export interface UpdateUserInput {
  id: string;
  name?: string;
}"
`;

exports[`schema-types-generator generates payload types from mutation return types 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { User, BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export interface LoginPayload {
  token: string;
  refreshToken?: string | null;
  user?: User | null;
}"
`;

exports[`schema-types-generator generates union types 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export type SearchResult = User | Post | Comment;"
`;

exports[`schema-types-generator skips table types and standard scalars 1`] = `
"/**
 * GraphQL schema types for custom operations
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import type { BigFloatFilter, BigIntFilter, BitStringFilter, BooleanFilter, DateFilter, DatetimeFilter, FloatFilter, FullTextFilter, IntFilter, IntListFilter, InternetAddressFilter, JSONFilter, StringFilter, StringListFilter, UUIDFilter, UUIDListFilter, VectorFilter } from "./types";
export type CustomEnum = "VALUE_A" | "VALUE_B";"
`;
